<resources>
    <string name="app_name">HarryPoterInfo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textgender">Gender :</string>
    <string name="dateBirth">BirthDay :</string>
    <string name="species">Species :</string>
    <string name="wizard">Wizard :</string>
    <string name="actor">Actor :</string>

    //spell details
    <string name="name">Name :</string>
    <string name="effect">Effect :</string>
    <string name="light">Light :</string>
    <string name="wiki">Wiki :</string>

    <string name="login">Sign In</string>
    <string name="signup">Sign Up</string>
</resources>