<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.DetailsFragment" >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_passwordChange2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/magic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="261dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040303"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/txtDetailsName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="@font/metal_mania_regular"
            android:text="TextView"
            android:textColor="#DF0A0A"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/detailsShape"
        android:layout_width="360dp"
        android:layout_height="434dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/border_shape"
        android:rotationX="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/detailsShape"
        app:layout_constraintStart_toStartOf="@+id/detailsShape"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textview4"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/wizard"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtwizard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/detailsShape"
        app:layout_constraintStart_toStartOf="@+id/detailsShape"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textview2"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/species"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtspecies"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="297dp"
        android:layout_height="56dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/detailsShape"
        app:layout_constraintStart_toStartOf="@+id/detailsShape"
        app:layout_constraintTop_toTopOf="@+id/detailsShape">

        <TextView
            android:id="@+id/textview"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/textgender"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imggender"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/female" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="294dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/detailsShape"
        app:layout_constraintStart_toStartOf="@+id/detailsShape"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/dateBirth"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtbirthDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="275dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/detailsShape"
        app:layout_constraintStart_toStartOf="@+id/detailsShape"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/textview5"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/metal_mania_regular"
            android:text="@string/actor"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtactor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/metal_mania_regular"
            android:text="Textview"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>