<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.DetailsFragment" >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_loading"
        android:layout_width="99dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgSpell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/spell" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="261dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#040303"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/txtspell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#03A9F4"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/detailsShape"
        android:layout_width="347dp"
        android:layout_height="331dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_spelldetails"
        android:rotationX="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="64dp"
        android:layout_height="175dp"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/detailsShape"
        app:layout_constraintStart_toStartOf="@+id/detailsShape"
        app:layout_constraintTop_toTopOf="@+id/detailsShape">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/light"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/effect"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="@string/wiki"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/detailsShape"
        app:layout_constraintEnd_toEndOf="@+id/detailsShape"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/detailsShape">

        <TextView
            android:id="@+id/txtspellname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtspellight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txteffect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metal_mania_regular"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:src="@drawable/wiki" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>